--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "reds",
+  "name": "meds",
   "version": "0.2.4",
-  "description": "Redis search for node.js",
+  "description": "MongoDB search for node.js",
   "keywords": [
-    "redis",
+    "mongodb",
     "search",
     "metaphone",
     "phonetics",
     "natural"
   ],
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "contributors": [
+    "Greg Thornton <xdissent@me.com>"
+  ],
   "dependencies": {
     "natural": "0.1.17",
-    "redis": "0.7.2"
+    "mongodb": "^1.4.5"
   },
   "devDependencies": {
     "should": "*",
@@ -22,6 +25,6 @@
   "main": "index",
   "repository": {
     "type": "git",
-    "url": "https://github.com/visionmedia/reds.git"
+    "url": "https://github.com/xdissent/meds.git"
   }
 }
