--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mongodb": "^1.4.5"
   },
   "devDependencies": {
-    "should": "*",
+    "should": "^4.0.0",
     "superagent": "*",
     "matcha": "~0.5.0"
   },
